# moonshine

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  entrypoint.sh  flake.nix  nfpm.yaml  rustfmt.toml  systemd-run-shim.sh
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci.yaml  docker-image.yml  release-ubuntu.yaml  release.yaml  rust.yaml
assets/: pin.html
cert/: make-cert
examples/observability/: README.md  docker-compose.yml  otelcol-config.yaml  prometheus.yml  tempo.yaml
examples/observability/grafana/dashboards/: moonshine-pipeline.json
examples/observability/grafana/provisioning/dashboards/: dashboards.yaml
examples/observability/grafana/provisioning/datasources/: datasources.yaml
ffmpeg/: Cargo.toml
ffmpeg-stream-test/: Cargo.toml
ffmpeg-stream-test/src/: error.rs  main.rs
ffmpeg-sys/: Cargo.toml  bindgen  build.rs  wrapper.c  wrapper.h
ffmpeg-sys/src/: generated.rs  lib.rs
ffmpeg/examples/: encode-audio.rs  encode-video.rs
ffmpeg/src/: error.rs  frame.rs  hwdevice.rs  hwframe.rs  lib.rs  packet.rs  sws.rs  util.rs
ffmpeg/src/codec/: context.rs  mod.rs
ffmpeg/src/frame/: mod.rs
gamestream/: Cargo.toml
gamestream/src/: main.rs
moonshine/: Cargo.toml
moonshine-core/: Cargo.toml
moonshine-core/src/: clients.rs  config.rs  crypto.rs  discovery.rs  lib.rs  rtsp.rs  state.rs  tls.rs
moonshine-core/src/app_scanner/: desktop.rs  lutris.rs  mod.rs  steam.rs
moonshine-core/src/session/: application.rs  manager.rs  mod.rs
moonshine-core/src/session/compositor/: color_management.rs  cursor.rs  focus.rs  frame.rs  gamescope_swapchain.rs  handlers.rs  input.rs  mod.rs  state.rs  x11_focus.rs
moonshine-core/src/session/compositor/protocols/: mod.rs
moonshine-core/src/session/stream/: mod.rs
moonshine-core/src/session/stream/audio/: buffer.rs  encoder.rs  mod.rs
moonshine-core/src/session/stream/audio/pulse_server/: commands.rs  dyn_buffer.rs  mod.rs
moonshine-core/src/session/stream/control/: feedback.rs  mod.rs
moonshine-core/src/session/stream/control/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  remap.rs
moonshine-core/src/session/stream/video/: mod.rs  packetizer.rs  shard_batch.rs
moonshine-core/src/session/stream/video/pipeline/: dmabuf.rs  hdr_sei.rs  mod.rs
moonshine-core/src/webserver/: mod.rs  pairing.rs
moonshine-ffmpeg/: Cargo.toml  wrapper.c  wrapper.h
moonshine-tools/: Cargo.toml  README.md
moonshine-wsi/: Cargo.toml  VkLayer_moonshine_wsi.x86_64.json  build.rs
moonshine-wsi/protocols/: moonshine-swapchain.xml
moonshine-wsi/src/: device.rs  dispatch.rs  instance.rs  lib.rs  log.rs  state.rs  surface.rs  swapchain.rs  xcb.rs
moonshine/src/: clients.rs  config.rs  crypto.rs  cuda.rs  encoder.rs  error.rs  lib.rs  main.rs  publisher.rs  rtsp.rs  service_publisher.rs  state.rs  util.rs  webserver.rs
moonshine/src/app_scanner/: mod.rs  steam.rs
moonshine/src/encoder/: codec.rs  mod.rs  muxer.rs  video_frame.rs
moonshine/src/ffmpeg/: hwframe.rs  mod.rs
moonshine/src/rtsp/: mod.rs  session.rs
moonshine/src/rtsp/session/: audio_stream.rs  control_stream.rs  mod.rs  rtp.rs  video_stream.rs
moonshine/src/session/: clients.rs  manager.rs  mod.rs
moonshine/src/session/rtsp/: mod.rs  session.rs.bak
moonshine/src/session/rtsp/stream/: audio.rs  control.rs  mod.rs  rtp.rs  video.rs
moonshine/src/session/rtsp/stream/audio/: capture.rs  encoder.rs  mod.rs
moonshine/src/session/rtsp/stream/video/: capture.rs  encoder.rs  mod.rs
moonshine/src/session/stream/: control.rs  mod.rs
moonshine/src/session/stream/audio/: encoder.rs  mod.rs
moonshine/src/session/stream/audio/capture/: mod.rs
moonshine/src/session/stream/audio/capture/backend/: mod.rs  pulseaudio.rs
moonshine/src/session/stream/control/: input.rs  mod.rs
moonshine/src/session/stream/control/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs
moonshine/src/session/stream/video/: capture.rs  encoder.rs  mod.rs
moonshine/src/webserver/: client.rs  mod.rs  pairing.rs  tls.rs
nix/: README.md  module.nix  package.nix
nvenc-sys/: Cargo.toml  build.rs
nvenc-sys/src/: lib.rs
nvfbc/: Cargo.toml
nvfbc-sys/: Cargo.toml  NvFBC.h  build.rs
nvfbc-sys/Capture_Linux_v8.0.8/: Changelog  LICENSE  README  ReleaseNotes.txt
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/: makefile
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/NvFBCCUDAAsync/: NvFBCCUDAAsync.c  makefile
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/NvFBCMultiThread/: NvFBCMultiThread.c  makefile
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/NvFBCSharedContext/: NvFBCSharedContext.c  makefile
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/NvFBCToGL/: NvFBCToGL.c  makefile
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/NvFBCToGLEnc/: NvFBCToGLEnc.c  makefile
nvfbc-sys/Capture_Linux_v8.0.8/NvFBC/samples/common/: NvFBCUtils.c  utils.mk
nvfbc-sys/src/: lib.rs
nvfbc/src/: error.rs  lib.rs  types.rs
packaging/appimage/: build.sh  install-system.sh
packaging/deb/: build.sh
reed-solomon/: Cargo.toml  bindgen  build.rs
reed-solomon/src/: generated.rs  lib.rs  rs.c  rs.h
scripts/: resolution
src/: bench.rs  clients.rs  config.rs  crypto.rs  discovery.rs  gpu_stats.rs  main.rs  publisher.rs  rtsp.rs  state.rs  telemetry.rs
src/app_scanner/: desktop.rs  mod.rs  steam.rs
src/ffmpeg/: hwdevice.rs  hwframe.rs
src/session/: application.rs  manager.rs  mod.rs
src/session/compositor/: color_management.rs  cursor.rs  focus.rs  frame.rs  gamescope_swapchain.rs  handlers.rs  input.rs  mod.rs  state.rs
src/session/compositor/protocols/: gamescope-swapchain.xml  mod.rs
src/session/stream/: mod.rs
src/session/stream/audio/: buffer.rs  capture.rs  encoder.rs  mod.rs  pulse_server.rs
src/session/stream/control/: feedback.rs  mod.rs
src/session/stream/video/: capture.rs  capture_x11.rs  encoder.rs  mod.rs  packetizer.rs  pipeline.rs  shard_batch.rs
src/webserver/: mod.rs  pairing.rs  tls.rs
tools/: capture_flamegraph.sh  parse_latency_logs.py  run_analysis.sh
(+19 files in other folders)
