[workspace]
members = [
	".",
	"moonshine-wsi",
]
exclude = [
	"waydroid-pa-sim",
]
resolver = "2"

[package]
name = "moonshine"
version = "0.9.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
ash = { git = "https://github.com/ash-rs/ash", rev = "55dd56906bbb5760e9e9e6c56f45be67f67e0649" }
async-shutdown = "0.2.2"
byteorder = "1.5.0"
bytes = "1.11.1"
calloop = "0.14.4"
cbc = "0.1.2"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5.15"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
dirs = "6.0.0"
tokio-enet = "0.1.0"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
image = "0.25.9"
inputtino = { version = "0.1.0", git = "https://github.com/games-on-whales/inputtino" }
libc = "0.2.182"
mio = { version = "1.1.1", features = ["net", "os-ext", "os-poll"] }
mio-timerfd = "0.2.0"
network-interface = "2.0.5"
notify-rust = "4.12.0"
open = "5.3.3"
opus = "0.3.1"
pixelforge = { git = "https://github.com/hgaiser/pixelforge", rev = "fc60c32", features = ["dmabuf"] }
pkcs8 = "0.10.2"
pulseaudio = "0.3.1"
rand = "0.8.5"
rcgen = "0.14.7"
fec-rs = { version = "0.1.0", features = ["parallel"] }
ring = "0.17.14"
rsa = "0.9.10"
rtsp-types = "0.1.3"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
sdp-types = "0.1.8"
serde = "1.0.228"
sha2 = "0.10.9"
shellexpand = "3.1.2"
shlex = "1.3.0"
smithay = { version = "0.7.0", default-features = false, features = ["backend_drm", "backend_gbm", "backend_egl", "renderer_gl", "wayland_frontend", "desktop", "xwayland", "x11rb_event_source"] }
strum_macros = "0.28.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "tracing"] }
tokio-rustls = "0.26.4"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4"] }
walkdir = "2.5.0"
wayland-scanner = "0.31"
x509-parser = "0.18.1"
xcursor = "0.3.10"
zeroconf = "0.17.0"

# [profile.release]
# debug = true

[dev-dependencies]
tempfile = "3.26.0"
