[workspace]
members = [".", "moonshine-core", "moonshine-wsi"]
resolver = "2"

[workspace.package]
version = "0.11.0"

[package]
name = "moonshine"
version.workspace = true
edition = "2021"

[dependencies]
async-shutdown = "0.2.2"
clap = { version = "4.5.60", features = ["derive"] }
moonshine-core = { path = "moonshine-core" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal", "sync", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[patch.crates-io]
smithay = { git = "https://github.com/hgaiser/smithay", tag = "v0.7.0-moonshine" }
