[workspace]
members = [".", "moonshine-core", "moonshine-tools", "moonshine-wsi"]
resolver = "2"

[workspace.package]
version = "0.13.5"

[package]
name = "moonshine"
version.workspace = true
edition = "2021"

[dependencies]
async-shutdown = "0.2.2"
clap = { version = "4.6.1", features = ["derive"] }
moonshine-core = { path = "moonshine-core" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal", "sync", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }


