[package]
name = "moonshine-core"
version.workspace = true
edition = "2021"

[dependencies]
# Config
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
shellexpand = "3.1.2"

# State
uuid = { version = "1.21.0", features = ["v4"] }
dirs = "6.0.0"

# Crypto
aes = "0.8.4"
aes-gcm = "0.10.3"
cbc = "0.1.2"

# Clients (pairing protocol)
aws-lc-rs = "1.16.2"
rsa = "0.9.10"
pkcs8 = "0.10.2"
sha2 = "0.10.9"
x509-parser = "0.18.1"
rustls-pemfile = "2.2.0"
hex = "0.4.3"

# App scanner
walkdir = "2.5.0"
steamlocate = "2.1.0"
image = "0.25.9"
which = "6"
zbus = { version = "5.15.0", features = ["blocking"] }
zvariant = "5.11.0"
open = "5.3.3"
shlex = "1.3.0"

# TLS
rand = "0.8.5"
rcgen = "0.14.7"
rustls = "0.23.40"
tokio-rustls = "0.26.4"

# RTSP
rtsp-types = "0.1.3"
sdp-types = "0.1.8"

# Webserver
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
network-interface = "2.0.5"
url = "2.5.8"
notify-rust = "4.12.0"

# Discovery
zeroconf = "0.17.0"

# Session (compositor)
ash = { git = "https://github.com/ash-rs/ash", rev = "55dd56906bbb5760e9e9e6c56f45be67f67e0649" }
calloop = "0.14.4"
smithay = { version = "0.7.0", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland",
    "x11rb_event_source",
] }
xcursor = "0.3.10"
wayland-scanner = "0.31"

# Session (video stream)
pixelforge = { git = "https://github.com/hgaiser/pixelforge", rev = "fc60c32", features = ["dmabuf"] }

# Session (audio stream)
opus = "0.3.1"
pulseaudio = "0.3.1"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
fec-rs = { version = "0.1.0", features = ["parallel"] }
byteorder = "1.5.0"
bytes = "1.11.1"
mio = { version = "1.1.1", features = ["net", "os-ext", "os-poll"] }
mio-timerfd = "0.2.0"

# Session (control stream)
tokio-enet = "0.1.0"
inputtino = { version = "0.1.0", git = "https://github.com/games-on-whales/inputtino" }
crossbeam-channel = "0.5.15"
bitflags = "2.9.4"

# Session (application)
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Shutdown coordination
async-shutdown = "0.2.2"

# Async runtime (used by clients, tls, rtsp, webserver, session)
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "tracing"] }

# Misc
strum_macros = "0.28.0"
tracing = "0.1.44"
libc = "0.2.182"

[dev-dependencies]
tempfile = "3.26.0"
