[package]
name = "moonshine-core"
version.workspace = true
edition = "2021"

[dependencies]
aes = "0.9.1"
aes-gcm = "0.10.3"
async-shutdown = "0.2.2"
ash = { git = "https://github.com/ash-rs/ash", rev = "55dd56906bbb5760e9e9e6c56f45be67f67e0649" }
aws-lc-rs = "1.17.0"
bitflags = "2.13.0"
byteorder = "1.5.0"
bytes = "1.11.1"
calloop = "0.14.4"
cbc = "0.2.1"
crossbeam-channel = "0.5.15"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
dirs = "6.0.0"
fec-rs = { version = "0.1.0", features = ["parallel"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
gethostname = "1.1.0"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
image = "0.25.10"
inputtino = { version = "0.1.0", git = "https://github.com/games-on-whales/inputtino" }
inout = "0.2.2"
libc = "0.2.186"
mdns-sd = "0.20.0"
mio = { version = "1.2.1", features = ["net", "os-ext", "os-poll"] }
mio-timerfd = "0.2.0"
network-interface = "2.0.5"
notify-rust = "4.17.0"
open = "5.3.5"
opus = "0.3.1"
pkcs8 = "0.11.0"
pixelforge = { git = "https://github.com/hgaiser/pixelforge", rev = "d60ce3af5266e12a398b756f2a0585f772f01f1c", features = ["dmabuf"] }
pulseaudio = "0.3.1"
rcgen = "0.14.8"
rsa = "0.9.10"
rtsp-types = "0.1.3"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
sdp-types = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
shellexpand = "3.1.2"
shlex = "2.0.1"
smithay = { git = "https://github.com/hgaiser/smithay", branch = "master-moonshine", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland",
    "x11rb_event_source",
] }
socket2 = "0.6.4"
steamlocate = "2.1.0"
strum_macros = "0.28.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "tracing"] }
tokio-enet = "0.1.0"
tokio-rustls = "0.26.4"
toml = "1.1.2"
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
walkdir = "2.5.0"
wayland-scanner = "0.31"
which = "8.0.3"
x509-parser = "0.18.1"
xcursor = "0.3.10"
zbus = { version = "5.16.0", features = ["blocking"] }
zvariant = "5.12.0"

[dev-dependencies]
tempfile = "3.27.0"
