[package]
name = "moonshine-tools"
version.workspace = true
edition = "2021"

[[bin]]
name = "moonshine-bench"
path = "src/bin/bench.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
moonshine-core = { path = "../moonshine-core" }
async-shutdown = "0.2.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
